"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-09-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-75-CHP-03-01:
	  This branch adds information necessary to reconstruct the
		precise context of every CHP statement with parent links.
	  Object/lang/CHP_base.h: flag CHP_ACTION_PARENT_LINK drafted
		and enabled.  This results in mandatorily deep-copying
		statement trees upon unroll to maintain correct 
		parent-child link relationships.  
		Test suite only fails on create-object differences
		due to statement replication.


2007-09-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-75:
	  Perm'd COPY_OF_PORT_ALIASES flag in Object/devel_switches.h


2007-09-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-74:
	  main/compile.cc: don't auto-name object file, because
		srcdir of input file is not automatically stripped.
	  dox/: Removed obsolete latex documentation.


	* HACKT-00-01-04-main-00-81-73:
	  No source revision, documentation updates only for PRS-07 merge.


	* HACKT-00-01-04-main-00-81-72-merged-PRS-07-13:
	  Five month old branch merged.  Syntactic support for
		PRS extensions tree and subckt, just parsed and ignored.
		Minimalist test cases included.
		Datatypes are now parsed like processes for simplicity.
		Added unstab attribute to PRS.  


2007-09-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-16-PRS-07-13:
	  parser/hackt-parse.yy.in: commented-out no longer used data_param
		syntax rules and types, superceded by generic types in grammar.


2007-09-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-16-PRS-07-12:
	  Four months later... still no contributed test cases... XS
	  Synchronizes with (Rajit's) ACT update from 20070909.